# dsvr

./: .gitignore  README.md  pyproject.toml  visualise_real_robot.py
notebooks/: pose_convergence.ipynb
scripts/: extract_images.py  fp_results.py  iiwa14_no_collision.urdf  rerun_debug.py  rerun_visualise.sh  vis_utils.py  visualise_contact_residuals.py  visualise_dataset.py  visualise_hole_meshes.py  visualise_nbv_reconstruction.py  visualise_occupancy.py  visualise_particle_poses.py  visualise_real_robot.py  visualise_reconstruction.py  visualise_robot.py  visualise_vision_contact_result.py  visualise_vision_result.py  visualise_vision_result_dual.py
src/dsvr/datasets/: robot_data.py
src/dsvr/results/: robot_results.py
src/dsvr/visualise/: add_plots.py
