[project]
name = "dsvr"
version = "0.1.0"
description = "Datasets, results and visualisation for perosnal robotics projects"
authors = [
    {name = "Aditya Kamireddypalli"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
