[project]
name = "dsvr"
version = "0.1.0"
description = "Datasets, results and visualisation for perosnal robotics projects"
authors = [
    {name = "Aditya Kamireddypalli"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jupyterlab (>=4.4.10,<5.0.0)",
    "jupyterlab-vim (>=4.1.4,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
